# dockit

./: .gitignore  LICENSE  README.md  app.py  build.py  build.sh  pyproject.toml  requirements.txt
.github/workflows/: auto-tag.yml  publish.yml  release.yml  version-bump.yml
Commands/: generator.py  init.py
Configs/: services.py
assets/: Debugger.py
code/: build.sh  dockit.spec  pyproject.toml
code/.github/workflows/: release.yml
code/commands/: publish.py
code/services/nginx/: service.json
code/services/php/: service.json
code/services/php/conf/7.4/: xdebug.ini
code/services/redis/: service.json
code/templates/: Dockerfile.j2  docker-compose.yml.j2
code/tests/: test_generator.py
code/utilities/: debugger.py
commands/: about.py  add_service.py  delete_service.py  generator.py  init.py  publish.py  view_service.py
configs/: services.py
scripts/: bump_version.py
services/foobar/: service.json
services/mailhog/: service.json
services/mongo/: service.json
services/mysql/: service.json
services/nginx/: default.conf.j2  node.conf  service.json
services/nginx/conf/1.25/: default.conf  nginx.conf
services/node/: service.json
services/php/: service.json
services/php/conf/7.4/: php.ini
services/php/conf/8.4/: xdebug.ini
services/phpmyadmin/: service.json
services/postgres/: service.json
services/test/: service.json
src/dockit/: app.py  docker-compose.yml
src/dockit/commands/: about.py  add_service.py  delete_service.py  generator.py  init.py  publish.py  version.py
src/dockit/services/mysql/: service.json
src/dockit/services/nginx/conf/latest/: laravel.conf  node.conf
src/dockit/services/phpmyadmin/: service.json
src/dockit/services/redis/: service.json
src/dockit/templates/skeletons/: image_base.json
src/dockit/utilities/: docker_manager.py  gitignore_manager.py  messenger.py  service_manager.py
templates/: Dockerfile.j2  docker-compose.yml.j2
templates/skeletons/: build_version.json  image_base.json
tests/: test_publish_command.py  test_service_manager.py
utilities/: gitignore_manager.py  messenger.py  path_resolver.py  service_manager.py
