[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockit-cli"
version = "2.0.0"
description = "A Docker management tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Islam Zekry", email = "theizekry@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0,<8.2.0",
    "rich>=10.0.0",
    "docker>=6.0.0",
    "typer>=0.9.0",
    "questionary>=1.10.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
dockit = "dockit.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dockit"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [
    "test_env/**",
]
# Add this section to ensure non-Python files are included
[tool.hatch.build.resources]
# Include all files in these directories
shared-data = [
    "src/dockit/templates/**",
    "src/dockit/services/**",
    "src/dockit/skeletons/**",
]
