[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockit-cli"
version = "0.0.4"
description = "A Docker management tool"
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "theizekry" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "docker>=6.0.0",
    "typer>=0.9.0",
    "questionary>=1.10.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
dockit = "app:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 